@@ -12,8 +12,6 @@ See also comments in ../texk/README.
 cairo 1.12.16 - checked 10sep13
   http://cairographics.org/releases/
 
-freetype 1.5 - ?
-
 freetype2 2.5.0.1 - checked 19jun13
   http://savannah.nongnu.org/download/freetype/
 
