@@ -92,7 +92,7 @@ tex4htk - checked 25apr11
 
 texlive - scripts maintained here, by us
 
-ttf2pk - maintained here, by us
+ttf2pk2 - maintained here, by us
 
 ttfdump - ?
 
